--- a/views/pages/iletisim.handlebars
+++ b/views/pages/iletisim.handlebars
@@ -4,7 +4,7 @@
     </div>
     <div class="card mb-3">
         <div class="card-body py-5">
-            <h4>Bilmemne ASM</h4>
+            <h4>{{siteInfo.site_name}}</h4>
             <div class="p-3">
                 <span class="d-block"><strong class="text-muted">Adres :</strong> {{iletisim.mainAddress}}</span>
                 <span class="d-block"><strong class="text-muted">Telefon :</strong> {{iletisim.mainPhone}}</span>
