--- a/views/pages/faydali-bilgiler.handlebars
+++ b/views/pages/faydali-bilgiler.handlebars
@@ -11,6 +11,7 @@
                                     <hr>
                                 {{/unless}}
                                 <h5>{{title}}</h5>
+                                <div><span class="text-muted">{{dateTrConv updatedAt}}</span></div>
                                 <div>
                                     {{{contentSummary content}}} <a href="/faydali-bilgiler/{{makeLink title}}/{{_id}}">Devamını Oku</a>
                                 </div>
