--- a/views/pages/admin/blog/blogs.handlebars
+++ b/views/pages/admin/blog/blogs.handlebars
@@ -44,7 +44,7 @@
                                 <tr>
                                     <td>{{title}}</td>
                                     <td>{{#each tags}}{{this}}{{#unless @last}},{{/unless}}{{/each}}</td>
-                                    <td>{{updatedAt}}</td>
+                                    <td>{{dateTrConv updatedAt}}</td>
                                     <td class="d-flex justify-content-center align-items-center">
                                         <div class="form-check mr-2">
                                             <input class="form-check-input" type="checkbox" value="{{_id}}" id="{{_id}}check" {{#if publish}}checked{{/if}} onclick="blogPublish(this)">
