--- a/views/pages/faydali-bilgiler.handlebars
+++ b/views/pages/faydali-bilgiler.handlebars
@@ -10,8 +10,10 @@
                                 {{#unless @first}}
                                     <hr>
                                 {{/unless}}
-                                <h5>{{title}}</h5>
-                                <div><span class="text-muted">{{dateTrConv updatedAt}}</span></div>
+                                <div class="d-flex justify-content-between align-items-center mb-3">
+                                    <h5>{{title}}</h5> <span class="text-muted">{{dateTrConv updatedAt}}</span>
+                                </div>
+
                                 <div>
                                     {{{contentSummary content}}} <a href="/faydali-bilgiler/{{makeLink title}}/{{_id}}">Devamını Oku</a>
                                 </div>
