--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
 
   {{{_sections.style}}}
 
-  <title>Bilmemne ASM - {{title}}</title>
+  <title>{{siteInfo.site_name}} - {{title}}</title>
 </head>
 
 <body style="background-color: #5ebfc4; background-image: url(/dist/images/texture_bubbles.png);">
